# axum2

./: Cargo.toml
src/: routes.rs
src/handlers/: todo.rs
src/models/: todo.rs
templates/: base.html  index.html
