[package]
name = "axum2"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"]}
serde = { version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
hyper = { version = "1.3.1", features = ["full"]}
tower-http = { version = "0.5.2", features = ["fs"] }
askama_axum = "0.4.0"
askama = "0.12.1"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "macros"]}